message("building ${PROJECT_NAME}")

set(SOURCE_FILES PointerNames.h NameLists.h)

add_library(${PROJECT_NAME} STATIC ${SOURCE_FILES})

target_include_directories(${PROJECT_NAME} PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:include>
		PRIVATE src)

set_target_properties(${PROJECT_NAME} PROPERTIES
		LINKER_LANGUAGE C
		VERSION ${PROJECT_VERSION}
		SOVERSION 1)

install(TARGETS ${PROJECT_NAME} EXPORT PointerNamesConfig
		ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
		LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
		RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})
install(DIRECTORY DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})

install(EXPORT PointerNamesConfig DESTINATION share/PointerNames/cmake)

export(TARGETS ${PROJECT_NAME} FILE PointerNamesConfig.cmake)
